--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+    "examples/example-deploy/host",
     "examples/uniswap/host",
     "examples/multiplexer/host",
     "examples/verify-quorum/host",
